# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.61 2004/06/10 15:55:11 zhen Exp $

  10 Jun 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/post-kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh:
  two new functions for livecd-stage2: livecd/rcadd and livecd/rcdel. these two
  functions control what scripts are added to their respective runlevels. This
  option would be specified like so in the spec file: livecd/rcadd:
  metalog:default foo:boot. the syntax is the same for livecd/rcdel.

  08 Jun 2004; John Davis <zhen@gentoo.org> modules/builder.py,
  modules/catalyst_support.py, modules/livecd_stage2_target.py:
  livecd-stage2 traced back when boot/kernel/x/config was an empty string, fixed
  the code to give a nice error msg instead of a cryptic traceback

  04 Jun 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  small fix for bootsplash, needed to link clst_livecd_bootsplash to
  /etc/bootsplash/default

  04 Jun 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/grp/grp-chroot.sh,
  targets/grp/grp-preclean-chroot.sh, targets/grp/grp.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean1-chroot.sh, targets/stage1/stage1.sh,
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/stage3/stage3-preclean-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh,
  targets/tinderbox/tinderbox.sh: