@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.61 2004/06/10 15:55:11 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.62 2004/06/11 19:06:37 zhen Exp $
+
+  11 Jun 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript/default-runscript.sh, modules/livecd_stage2_target.py:
+  new key, livecd/fsscript. use this to run commands in the livecdfs before it
+  is made into an iso
 
   10 Jun 2004; John Davis <zhen@gentoo.org>
   livecd/runscript-support/kmerge.sh,
